--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="google-site-verification" content="2ljq5Y85fLwzSV8aSCkOPhb6J9ZTGXbDFXwKuU9q0Uw" />
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="https://i.ibb.co/Gq6nMP3/profile-modified.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
